PUT and DELETE routes + Error handling with try/catch statements for GET routes
